gac_sb/objects/AppATEconomieClient__c.object
<CustomObject>
    <description>APPLICATION AT</description>
    <fields>
        <fullName>MasseSalarialeActuelle__c</fullName>
        <label>Masse salariale actuelle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;&amp;Recours__r.DossierSalarie__r.Mission__c , Recours__r.DossierSalarie__r.Mission__r.Name,&quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mission</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MontantEconomieClient__c</fullName>
        <formula>( TauxInitial__c -   TauxRectifie__c )* MasseSalarialeActuelle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant de l&apos;économie Client</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MontantEconomiePonderee__c</fullName>
        <formula>MontantEconomieClient__c * Recours__r.Mission__r.Contrat__r.Taux_de_remuneration__c/100 * Recours__r.TauxSucces__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant économie pondérée</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recours__c</fullName>
        <label>Recours</label>
        <referenceTo>AppATrecours__c</referenceTo>
        <relationshipName>InteretsFinanciers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TECH_Annee_numero__c</fullName>
        <formula>VALUE(Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH Année numéro</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_OrdreEconomieClient__c</fullName>
        <formula>CASE(Recours__r.TECH_1AnneeEconomieClient__c -  TECH_Annee_numero__c,
  0,1,
  1,2,
  2,3,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH Ordre Economie client</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TauxInitial__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Taux Initial</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TauxRectifie__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Taux rectifié</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Économie Client</label>
    <nameField>
        <label>Année</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Economies Client</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AppAT_Interet_fi_Annee</fullName>
        <active>true</active>
        <errorConditionFormula>IF(LEFT(Name,1)=&apos;2&apos;, 
NOT(REGEX(Name, &apos;[2]{1}[0]{1}[0-9]{2}&apos;)), 
NOT(REGEX(Name, &apos;[1]{1}[9]{1}[0-9]{2}&apos;)) 
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>L&apos;année doit être au format 20XX ou 19XX</errorMessage>
    </validationRules>
</CustomObject>